# market_aggregator

./: .gitignore  Cargo.toml  README.md
counter/: Cargo.toml  Trunk.toml
counter/src/: main.rs
dashboard/: .env  Cargo.toml  README.md  Trunk.toml  build.rs  index.scss
dashboard/src/: main.rs
dashboard/src/common/: config.rs  entities.rs  enums.rs  env.rs  error.rs  mod.rs  utils.rs  web_socket_service.rs
dashboard/src/components/: currencies.rs  dashboard.rs  mod.rs  quotes.rs  suspense.rs  use_sleep.rs
dashboard/src/services/: mod.rs  restapi.rs  websocket.rs
