[package]
name = "counter"
version = "0.1.1"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
gloo = "0.10"
js-sys = "0.3"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
futures = "0.3.30"
gloo-net = "0.5.0"
wasm-bindgen-futures = "0.4.42"

