[package]
name = "dashboard"
version = "0.1.1"
authors = ["Maksim Shubkin <mmshubkin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
gloo = "0.10"
js-sys = "0.3"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
futures = "0.3.30"
gloo-net = "0.5.0"
wasm-bindgen-futures = "0.4.42"
thiserror = "1.0.61"
derive_more = { version = "0.99.17", features = ["from"] }
log = "0.4.21"
wasm-logger = "0.2.0"
serde = "1.0.203"
serde_json = "1.0.117"
linked_hash_set = "0.1.4"
chrono = "0.4.38"

[build-dependencies]
dotenv = "0.15.0"
